@@ -37,7 +37,7 @@ static bool _updateSweep(struct GBAudioSquareChannel* sweep, bool initial);
 static void _updateSquareSample(struct GBAudioSquareChannel* ch);
 static int32_t _updateSquareChannel(struct GBAudioSquareChannel* ch);
 
-static int8_t _coalesceNoiseChannel(struct GBAudioNoiseChannel* ch);
+static int16_t _coalesceNoiseChannel(struct GBAudioNoiseChannel* ch);
 
 static void _updateFrame(struct mTiming* timing, void* user, uint32_t cyclesLate);
 static void _updateChannel1(struct mTiming* timing, void* user, uint32_t cyclesLate);
@@ -632,8 +632,11 @@ void GBAudioSamplePSG(struct GBAudio* audio, int16_t* left, int16_t* right) {
 		}
 	}
 
+	sampleLeft <<= 3;
+	sampleRight <<= 3;
+
 	if (!audio->forceDisableCh[3]) {
-		int8_t sample = _coalesceNoiseChannel(&audio->ch4);
+		int16_t sample = audio->style == GB_AUDIO_GBA ? (audio->ch4.sample << 3) : _coalesceNoiseChannel(&audio->ch4);
 		if (audio->ch4Left) {
 			sampleLeft += sample;
 		}
@@ -642,9 +645,6 @@ void GBAudioSamplePSG(struct GBAudio* audio, int16_t* left, int16_t* right) {
 			sampleRight += sample;
 		}
 	}
-
-	sampleLeft <<= 3;
-	sampleRight <<= 3;
 
 	*left = sampleLeft * (1 + audio->volumeLeft);
 	*right = sampleRight * (1 + audio->volumeRight);
@@ -768,12 +768,12 @@ static int32_t _updateSquareChannel(struct GBAudioSquareChannel* ch) {
 	}
 }
 
-static int8_t _coalesceNoiseChannel(struct GBAudioNoiseChannel* ch) {
+static int16_t _coalesceNoiseChannel(struct GBAudioNoiseChannel* ch) {
 	if (!ch->nSamples) {
 		return ch->sample;
 	}
 	// TODO keep track of timing
-	int8_t sample = ch->samples / ch->nSamples;
+	int16_t sample = (ch->samples << 3) / ch->nSamples;
 	ch->nSamples = 0;
 	ch->samples = 0;
 	return sample;
